GCP/single-nodejs-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-service
  template:
    metadata:
      labels:
        app: nodejs-service
    spec:
      containers:
      - name: nodejs-service-container
        image: DOCKERHUB_USERNAME/YOUR_APP_NAME
        ports:
        - name: nodejs-port
          containerPort: 3000
