GCP/single-nodejs-service/lb-app.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-service
spec:
  ports:
  - port: 80
    targetPort: nodejs-port
    protocol: TCP
  # 'selector' means that this service is created for the pod that is labelled with the key/value pair 'app:label'
  selector:
    app: nodejs-service
  type: LoadBalancer
