GCP/single-nodejs-service/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-service
spec:
  selector:
    app: nodejs-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: nodejs-port
